tests/transpiler/x/fortran/slice.error
error[I013]: index must be an integer, got parser.IntLit
  --> /workspace/mochi/tests/vm/valid/slice.mochi:1:14

  1 | print([1,2,3][1:3])
    |              ^

help:
  Use an `int` value as an index (e.g., `list[0]`).